--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,9 @@
 <!-- <p>{{ 3.5 | roundNum : false : 1 }}</p> -->
 <p [innerHtml]="linkGoogle | newLine | linkify"></p>
 
-<div *ngIf="(linkDantri | linkify:'urlInfos')?.length>0">
-    <div *ngFor="let urlInfo of linkDantri | linkify:'urlInfos'">
-        <p [innerHtml]="urlInfo.content | newLine"></p>
-        <img src="{{ urlInfo.image }}" />
-    </div>
+<div *ngFor="let urlInfo of linkDantri | linkify:'urlInfos'">
+    <p [innerHtml]="urlInfo.content | newLine"></p>
+    <img src="{{ urlInfo.image }}" />
 </div>
 
 <p>{{ number1 | chanLe }}</p>
@@ -19,3 +17,5 @@
 <input type="text" [value]="number2 | chanLe" />
 
 <p [innerHtml]="url | linkUrl"></p>
+
+<img src="{{'pdf' | iconType}}" width="100" height="60">
